tests/baselines/reference/MemberFunctionDeclaration7_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration7_es6.ts(2,4): error TS9001: Generators are not currently supported.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration7_es6.ts (1 errors) ====
    class C {
       *foo<T>() { }
       ~
!!! error TS9001: Generators are not currently supported.
    }